	'*' and was thus restricted, and change_environment could not be
	reset to false).
	* src/su.c: No need to change the user's shell in case of
	subsystem root. Update the comments.
	* src/su.c: Define shellstr before the environment so that
	restricted_shell is called only once. This will allow moving the
	environment definition after the switch to the new user.

2011-06-10  Nicolas François  <nicolas.francois@centraliens.net>

	* src/su.c: Updating pwent after expire() is not useful. Only the
	password information may have changed and they are not used
	anymore afterwards.
	* src/su.c: No need to call expire() if there are no shadow entry.
	No need to convert a passwd entry into an spwd entry in that case.

2011-06-12  Thomas Blein  <tblein@tblein.eu>

	* man/po/fr.po: French manpages translation

2011-06-05  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/su.c: Do not forward the controlling terminal to
	commands executed with -c. This prevents tty hijacking which could
	lead to execution with the caller's privileges. This required to
	forward signals from the terminal (SIGINT, SIGQUIT, SIGTSTP) to
	the executed command.

2011-06-05  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/userdel.c: Do not remove a group with the same name as
	the user (usergroup) if this group isn't the user's primary group.

2011-06-04  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/userdel.c: Check the existence of the user's mail
	spool before trying to remove it. If it does not exist, a warning
	is issued, but no failure.

2011-06-03  Nicolas François  <nicolas.francois@centraliens.net>

	* src/sulogin.c: Added Prog, needed because of the last xmalloc()
	change.

2011-06-03  Nicolas François  <nicolas.francois@centraliens.net>

	* man/zh_CN/, man/zh_CN/Makefile.am: Added directory, and zh_CN
	Makefile.
	* man/Makefile.am: Build zh_CN pages.
	* man/generate_translations.mak: Add config.xml to CLEANFILES.